--- a/BlackC/BlackC.csproj
+++ b/BlackC/BlackC.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Preprocessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scanner.cs" />
+    <Compile Include="SourceBuffer.cs" />
     <Compile Include="SymbolTable.cs" />
     <Compile Include="Token.cs" />
   </ItemGroup>
