reorganized Black C Jr source structure, renamed input stages

--- a/BlackCJr/BlackCJr.csproj
+++ b/BlackCJr/BlackCJr.csproj
@@ -43,12 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ASTNode.cs" />
+    <Compile Include="OIL\ASTNode.cs" />
     <Compile Include="BlackCJr.cs" />
     <Compile Include="Parser.cs" />
-    <Compile Include="Preprocessor.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scanner.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tokenizer.cs" />
     <Compile Include="Token.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
