--- a/BlackC/BlackC.csproj
+++ b/BlackC/BlackC.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7ED44C04-538F-48B3-B2FB-9ADD2F02C5E5}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BlackC</RootNamespace>
     <AssemblyName>BlackC</AssemblyName>
@@ -47,21 +47,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arbor.cs" />
-    <Compile Include="AST\Node.cs" />
     <Compile Include="BlackC.cs" />
+    <Compile Include="OIL\OILNode.cs" />
     <Compile Include="Parser\ParseDeclar.cs" />
     <Compile Include="Parser\ParseExpr.cs" />
     <Compile Include="Parser\ParseStmt.cs" />
-    <Compile Include="Scanner\Macro.cs" />
+    <Compile Include="Lexer\Macro.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="ParseNode.cs" />
     <Compile Include="Parser\Parser.cs" />
-    <Compile Include="Scanner\Preprocessor.cs" />
+    <Compile Include="Lexer\Preprocessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scanner\Scanner.cs" />
+    <Compile Include="Lexer\Scanner.cs" />
+    <Compile Include="Lexer\Tokenizer.cs" />
     <Compile Include="SourceBuffer.cs" />
     <Compile Include="SymbolTable.cs" />
-    <Compile Include="Scanner\Token.cs" />
+    <Compile Include="Lexer\Token.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
