--- a/BlackC/BlackC.csproj
+++ b/BlackC/BlackC.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="Arbor.cs" />
     <Compile Include="BlackC.cs" />
+    <Compile Include="ENAML\EnamlData.cs" />
+    <Compile Include="OIL\OILCan.cs" />
     <Compile Include="OIL\OILNode.cs" />
     <Compile Include="Parser\ParseDeclar.cs" />
     <Compile Include="Parser\ParseExpr.cs" />
@@ -60,7 +62,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Lexer\Scanner.cs" />
     <Compile Include="Lexer\Tokenizer.cs" />
-    <Compile Include="SourceBuffer.cs" />
     <Compile Include="SymbolTable.cs" />
     <Compile Include="Lexer\Token.cs" />
   </ItemGroup>
