--- a/BlackC/BlackC.csproj
+++ b/BlackC/BlackC.csproj
@@ -46,7 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arbor.cs" />
+    <Compile Include="OIL\OILDrum.cs" />
+    <Compile Include="Parser\Arbor.cs" />
     <Compile Include="BlackC.cs" />
     <Compile Include="ENAML\EnamlData.cs" />
     <Compile Include="OIL\OILCan.cs" />
@@ -56,13 +57,13 @@
     <Compile Include="Parser\ParseStmt.cs" />
     <Compile Include="Lexer\Macro.cs" />
     <Compile Include="Options.cs" />
-    <Compile Include="ParseNode.cs" />
+    <Compile Include="Parser\ParseNode.cs" />
     <Compile Include="Parser\Parser.cs" />
     <Compile Include="Lexer\Preprocessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Lexer\Scanner.cs" />
     <Compile Include="Lexer\Tokenizer.cs" />
-    <Compile Include="SymbolTable.cs" />
+    <Compile Include="Parser\SymbolTable.cs" />
     <Compile Include="Lexer\Token.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
