--- a/BlackC/BlackC.csproj
+++ b/BlackC/BlackC.csproj
@@ -61,22 +61,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OIL\OILDrum.cs" />
-    <Compile Include="Parser\Arbor.cs" />
-    <Compile Include="BlackC.cs" />
     <Compile Include="ENAML\EnamlData.cs" />
     <Compile Include="OIL\OILCan.cs" />
+    <Compile Include="OIL\OILDrum.cs" />
     <Compile Include="OIL\OILNode.cs" />
-    <Compile Include="Parser\ParseDeclar.cs" />
-    <Compile Include="Lexer\Macro.cs" />
+    <Compile Include="Parse\Arbor.cs" />
+    <Compile Include="BlackC.cs" />
+    <Compile Include="Parse\ParseDeclar.cs" />
+    <Compile Include="Scan\Macro.cs" />
     <Compile Include="Options.cs" />
-    <Compile Include="Parser\Parser.cs" />
-    <Compile Include="Lexer\Preprocessor.cs" />
+    <Compile Include="Parse\Parser.cs" />
+    <Compile Include="Scan\Preprocessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Lexer\Scanner.cs" />
-    <Compile Include="Lexer\Tokenizer.cs" />
-    <Compile Include="Parser\SymbolTable.cs" />
-    <Compile Include="Lexer\Token.cs" />
+    <Compile Include="Scan\Scanner.cs" />
+    <Compile Include="Scan\Tokenizer.cs" />
+    <Compile Include="Parse\SymbolTable.cs" />
+    <Compile Include="Scan\Token.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
